--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <style>
+        canvas {
+            border: 2px solid black;
+        }
+    </style>
 </head>
 
 <body>
