--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style>
+        .canvas-container {
+            width: 100%;
+            text-align: center;
+        }
         canvas {
             border: 2px solid black;
+            display: inline;
         }
     </style>
 </head>
 
 <body>
 
-    <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
+    <div class="canvas-container">
+        <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
+    </div>
 
     <script type='text/javascript'>
         var Module = {
