--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width">
     <style>
+        html {
+            touch-action: manipulation;
+        }
         .canvas-container {
             width: 100%;
             text-align: center;
