--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#1976d2">
     <style>
         html {
             touch-action: manipulation;
@@ -60,6 +62,15 @@
     </div>
 
     <script type='text/javascript'>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js')
+                .then(function(registration) {
+                    console.log('Registration successful, scope is:', registration.scope);
+                })
+                .catch(function(error) {
+                    console.log('Service worker registration failed, error:', error);
+                });
+        }
         var Module = {
             canvas: (function() { return document.getElementById('canvas'); })()
         };
